# training

./: .cproject  .project  CMakeLists.txt  Dockerfile  Makefile  build.sh  common.mk  common_c.mk  rules.mk  rules.mk.bak
bashtraining/: find_examples.sh  regex.sh  sample.txt  sed_examples.sh
basicContainer/: Dockerfile
cppcon/: Resources.txt
fullContainer/: Deployment.txt  Dockerfile  DockerfileTools  Material.txt
include/algorithms/: quicksort.h
include/containers/: lock_free_stack.h  thread_safe_hash.h  thread_safe_list.h  thread_safe_queue.h
include/libbase/: logger.h  random_generator.h  rwlock.h
include/libdatastructures/: c_vector.h  declareListTypes.h  dynamicQueue.h  dynamic_queue.h  hash.h  list.h  queue.h
include/libeconomics/: interestcalc.h
include/libipc/: ipc.h
include/libstatemachine/: basicStateMachine.h
include/libthread/: Thread.h  thread.h
include/utils/: Noisy.h  RCObjects.h  SmartPointer.h  counted.h  generic_handles.h  thread_safe_boost_check.h  utils.h
modules/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  Makefile  hello.ko  hello.mod.c  modules.order  scull.c
modules/.tmp_versions/: hello.mod
python/: main.py  routertesting.py  simpleTestCaseCommand  xmlhandling.py
python/Python-3.3.0/: pyconfig.h
python/basictraining/: controlFlow.py  functions.py  lists.py  printing.py  variables.py
python/temp/: config.xml  main.py
resources/: testFile.txt  text1_diff.c  text2_diff.c
src/: .train.cpp.swn  .train.cpp.swo  .train.cpp.swp
src/libcontainers/: Makefile  thread_safe_cont_test.cpp
src/libdatastructures/: Makefile  datastructures.c
src/libipc/: .Makefile.swp  Makefile
src/libthread/: Makefile  Thread.cpp  thread.cpp
testapps/: main.cpp
testapps/Algorithms/: FinanceStuff.h  HourGlassBacktracking.h  Makefile  MaxWaterBeetwinBuildings.h  N-Queen-Problem.h  Sorting.h  WordBreaking.h  algorithms.cpp  algorithms.gcda  algorithms.gcno  binominal_coefficents.h  bit_manipulation.h  coin_changing_problem.h  collect_max_points_before_hitting_dead_end.h  combination.h  combination_k_out_of_n_items.h  communication_stations.h  escape_from_room.h  fillCanvas.h  find_edge_picture.h  graph.h  labyrinth.h  labyrinth_wall.h  list  longest_common_subsequence.h  longest_path_hurdels.h  matching_brackets.h  max_non_parallel_lines.h  mergeSort.h  min_cost_in_matrix.h  num_ways_to_reach_stairs.h  numberofPossibleScores.h  numers_have_four_digit.h  perf.data  permutation.h  rat_in_a_maze.h  shortest_path_warmhole.h  shortest_source_dst_bfs.h  stack_queues.h  stl.h  (+2 more)
testapps/C/: Arrays.c  Arrays.h  Io.h  Makefile  algorithms.h  bithacks.c  bithacks.h  dynamic_programming.h  knapsack_problem.h  main.c  main.cpp  sorting.h  stack.h  strings.h  trees.h
testapps/C++11/: C++11.cpp  C++11.out  Cpp11Notes.cpp  Cpp11Notes.h  Makefile  Move.h  SmartPointers.h  enums.h
testapps/C++14/: Makefile
testapps/C++17/: AutomaticTypeDeduction.h  C++17.cpp  FoldExpressions.h  Makefile  StructureBinding.h  lambdas.h  templates.h
testapps/ConcurrencyInAction/: Concurrency.cpp  Concurrency.outdsds  DesigningConcurrentCode.h  LockBasedDesign.cpp  LockBasedDesign.h  Makefile  ManagingThreads.h  MemoryModel.cpp  MemoryModel.h  SharingDataThreads.h  Synchronization.h  ThreadPools.h  perf.data.old  stress.sh  temp.txt
testapps/Demo/: Makefile  ResourceManagementBad.h  ResourceManagementGood.h  ResourceManagementGreat.h  ResourceManagementModern.h  SamsungDemo.cpp  cppcheck.txt  suppress.txt  valgrind.txt
testapps/EffectiveModernC++/: Concurrency.h  EffectiveModernC++.cpp  Makefile  ModernC++.h  RValueReferences.h  SmartPointers.h  TypeDeduction.h  lambdas.h
testapps/Finance/: Makefile  Numerics.h  Primitives.h  STLAlgorithms.h  Threading.h  main.cpp
testapps/Gmock/: Makefile  hal.h  main.cpp
testapps/Interview/: Basic.h  Makefile  Medium.h  interview.cpp
testapps/ModernC++Design/: CMakeLists.txt  PolicyBasedDesign.h  TypeTraits.h  main.cpp  modern_c++_design
testapps/MoreEffectiveC++/: Basic.h
testapps/MoveSemanticsJosutis/: Makefile  MoveSemantics.cpp
testapps/Networking/: CMakeCache.txt  CMakeLists.txt  Makefile  RTPStreaming_copy.h  cmake_install.cmake  main.cpp  networking  networking.cbp
testapps/Networking/include/: BlockingQueue.h  FileReader.h  IGMPListener.h  Logging.h  MulticastClient.h  RTPHeader.h  RTPStreaming.h  TSPacket.h
testapps/Networking/src/filesystem/: FileReader.cpp
testapps/Networking/src/networking/: IGMPListener.cpp  MulticastClient.cpp  RTPHeader.cpp
testapps/Networking/src/rtpstream/: RTPStreaming.cpp
testapps/Networking/src/utils/: Logging.cpp
testapps/ProfessionalTest/: ArrayPrimitives.h  Autocomplete.h  Autocorrection.h  CorruptedFile.h  Dfs.h  Makefile  MemoryAllocator.h  Pipeline.h  WindowManager.h  main.cpp  main.gcda  main.gcno  simple_hash.h
testapps/SutterGuruOfTheWeek/: GotWIssues1.h  Guru.cpp  Makefile
testapps/SutterGuruWeek/: GotWIssues1.h  guru.out
testapps/ThinkingC++/: Algorithms.h  BuildingStableSystems.h  DesignPatterns.h  Exceptions.h  Functors.h  Makefile  MultipleInheritance.h  Stl.h  Templates.h  ThinkingC++.cpp  ThinkingC++.cpp.orig  ThinkingC++.out  iostreams.h  mithis.out  strings.h
testapps/Threading/: Makefile  PthreadUsage.h  SimpleThreading.h  ThreadQueue.h  ThreadingProblems.h  Threads.cpp  Threads.out  temp.txt
testapps/Various/: .swp  Makefile  Various.cpp
testapps/amazon/: Makefile  amazon.cpp  easy.h  medium.h
testapps/assembly/: a.out  hello_world  main.cpp  objectInspection.s
testapps/bartek/: Makefile  main.cpp  optional.h  optional_standard.h  time.h
testapps/crackingCodingInterview/: ArraysStrings.h  Graphs.h  LinkList.h  Makefile  Trees.h  main.cpp
testapps/datastructures/: Hash.h  Makefile  datastructures.c  datastructures.cpp  testList.h  testQueue.h
testapps/diff_tool/: DiskReader.h  File.h  FileDiff.h  Makefile  main.cpp
testapps/effectiveC++/: Constructors.h  Date.h  DateFwd.h  Designs.h  Inheritance.h  Makefile  Person.cpp  Person.h  PersonImpl.h  ResourceManagement.h  Templates.h  (+2 more)
testapps/video/: CMakeLists.txt  main.cpp
(+143 files in other folders)
